#+title: Change Log for ollama-buddy
#+author: James Dyer
#+email: captainflasmr@gmail.com
#+language: en
#+options: ':t toc:nil author:nil email:nil num:nil title:nil
#+todo: TODO DOING | DONE
#+startup: showall

This document contains the release notes for each tagged commit on the
project's main git repository: [[https://github.com/captainflasmr/ollama-buddy

* Versions

** <2025-02-11>

Significant improvements and refactoring, particularly around connection handling, streaming responses, and status monitoring.

- Replace curl-based requests with native network processes
- Added customizatble ollama host and port  
- Added connection monitoring with automatic status updates
- Added permanently visible status showing connection state and current model
- Improve error handling for connection failures
- Refined AI assistant presentation

** <2025-02-07>

Increase menu columns to 4, add dictionary lookup and save chat options  

- Change `ollama-buddy-menu-columns` from 3 to 4  
- Rename "Describe code" menu key from `?d` to `?c`  
- Add dictionary lookup feature (`?d`)  
- Add synonym lookup feature (`?n`)  
- Add "Save chat" option (`?s`) to write chat buffer to a file  

** <2025-02-07>

Added query finished message.

** <2025-02-06>

- Initial release
- Basic chat functionality
- Menu-driven interface
- Region-based interactions
- Model switching support

* Testing

Developing locally and running through and evaluating elisp code.

Sending text below with various edge cases and challenging content to test =ollama-buddy= text handling capabilities.

#+begin_src text
=== Test Case 1: Special Characters and Symbols ===
§ ¶ † ‡ ± ÷ × ≠ ≈ ~ ≤ ≥ µ ¢ £ € ¥ © ® ™
⁰ ¹ ² ³ ⁴ ⁵ ⁶ ⁷ ⁸ ⁹ ⁿ ∞ ∑ ∏ √ ∂ ∆ ∇ ∫ ∮

=== Test Case 2: Quotation Marks and Apostrophes ===
"Smart quotes" vs "straight quotes"
Don't mix up 'single' and 'curly' quotes
She said: "I'm not sure about the 'nested quotes' here."

=== Test Case 3: JSON-like Content ===
{
  "key": "value with \"quotes\"",