@@ -11,6 +11,13 @@ project's main git repository: [[https://github.com/captainflasmr/ollama-buddy
 
 * Versions
 
+** <2025-02-12>
+
+- =ollama-buddy= updated in preparation for MELPA submission
+- Removed C-c single key user keybinding as part of package definition and in the README gave guidance on defining a user keybinding to activate the ollama buddy menu
+- Added =ellama= comparison description
+- Activating and deactivating the =ollama= monitor process now users responsibility
+
 ** <2025-02-11>
 
 Significant improvements and refactoring, particularly around connection handling, streaming responses, and status monitoring.
